--- a/index.html
+++ b/index.html
@@ -18,26 +18,27 @@
 <body class="debug">
 
   <header>
-    <div class="container">
+    <section class="container">
       <div class="row">
         <div class="col-12">
           <p>Start Bootstrap</p>
         </div>
       </div>
-    </div>
+    </section>
   </header>
 
   <main>
     <!-- ANCHOR hero -->
     <section class="container">
       <div class="row">
-        <div class="col-6">
+        <!-- NOTE you are a col-12 until you hit the medium breakpoint(768px) and then you are col-6 -->
+        <div class="col-12 col-md-6">
           <h1>Showcase your app beautifully.</h1>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut eaque qui eius voluptas harum sequi!</p>
           <button>Google Play</button>
           <button>App Store</button>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <!-- NOTE img-fluid tells an img tag to not escape the bounds of column containing it (col-6) -->
           <img class="img-fluid"
             src="https://images.unsplash.com/photo-1505156868547-9b49f4df4e04?q=80&w=2263&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -50,7 +51,7 @@
     <!-- NOTE container-fluid goes full width -->
     <section class="container-fluid bg-primary">
       <div class="row justify-content-center">
-        <div class="col-8">
+        <div class="col-12 col-md-8">
           <h2>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, magnam! Inventore, nam."</h2>
           <!-- TODO add a logo here -->
           <p class="text-center">The next web</p>
@@ -61,31 +62,31 @@
     <!-- ANCHOR features -->
     <section class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-md-4 order-2 order-md-1">
           <img class="img-fluid"
             src="https://images.unsplash.com/photo-1505156868547-9b49f4df4e04?q=80&w=2263&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="Phone with instagram logo">
         </div>
 
-        <div class="col-8">
+        <div class="col-12 col-md-8 order-1 order-md-2">
           <!-- NOTE we can split up a column with a row, which gives another 12 units of spacing to work with inside of that column -->
           <div class="row">
-            <div class="col-6 text-center">
+            <div class="col-12 col-md-6 text-center">
               <p class="fs-1">📱</p>
               <p>Device Mockups</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
-            <div class="col-6 text-center">
+            <div class="col-12 col-md-6 text-center">
               <p class="fs-1">📷</p>
               <p>Flexible Use</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
-            <div class="col-6 text-center">
+            <div class="col-12 col-md-6 text-center">
               <p class="fs-1">🎁</p>
               <p>Free to Use</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
-            <div class="col-6 text-center">
+            <div class="col-12 col-md-6 text-center">
               <p class="fs-1">✅</p>
               <p>Open Source</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
@@ -101,14 +102,14 @@
       <!-- NOTE no padding on rows -->
       <div class="row mx-5">
         <!-- NOTE no maring on columns -->
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <h2>Enter a new age of web design</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi velit assumenda maxime ducimus
             exercitationem voluptas aliquam perspiciatis dolore, reiciendis ullam repellendus, dolorum quisquam
             consequuntur reprehenderit aperiam harum hic quidem dolor ad praesentium! Earum doloribus sit ducimus
             obcaecati perspiciatis consectetur quod!</p>
         </div>
-        <div class="col-6">
+        <div class="col-12 col-md-6">
           <img class="img-fluid rounded-circle"
             src="https://images.unsplash.com/photo-1620207418302-439b387441b0?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY4MTg1MDA0OA&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=900"
             alt="Abstract colors">
@@ -144,14 +145,14 @@
   </main>
 
   <footer>
-    <div class="container-fluid">
+    <section class="container-fluid">
       <div class="row">
         <div class="col-12 text-center">
           <small class="d-block">© Your Website 2024. All Rights Reserved.</small>
           <small class="d-block">Privacy | Terms | FAQ</small>
         </div>
       </div>
-    </div>
+    </section>
   </footer>
 
 </body>
