--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   <!-- Mick's bootstrap debugging tool -->
   <script id="debug-script" src="https://cdn.jsdelivr.net/gh/MickShannahan/style-debug@latest/debug.min.js"
     defer></script>
+  <!-- Google font links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap"
+    rel="stylesheet">
+  <!-- Material design icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <!-- Load our own style sheet after bootstrap in case we want to overwrite something -->
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
@@ -17,11 +25,12 @@
 
 <body class="debug">
 
-  <header>
+  <!-- NOTE sticky top makes navbar scroll along with page -->
+  <header class="shadow sticky-top bg-light p-3">
     <section class="container">
       <div class="row">
         <div class="col-12">
-          <p>Start Bootstrap</p>
+          <p class="fw-bold mb-0">Start Bootstrap</p>
         </div>
       </div>
     </section>
@@ -30,13 +39,20 @@
   <main>
     <!-- ANCHOR hero -->
     <section class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <!-- NOTE you are a col-12 until you hit the medium breakpoint(768px) and then you are col-6 -->
         <div class="col-12 col-md-6">
-          <h1>Showcase your app beautifully.</h1>
+          <h1 class="newsreader">Showcase your app beautifully.</h1>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut eaque qui eius voluptas harum sequi!</p>
-          <button>Google Play</button>
-          <button>App Store</button>
+          <button class="btn btn-dark">
+            <!-- NOTE icon brought in through mdi link in header -->
+            <i class="mdi mdi-google-play text-success"></i>
+            Google Play
+          </button>
+          <button class="btn btn-dark">
+            <i class="mdi mdi-apple"></i>
+            App Store
+          </button>
         </div>
         <div class="col-12 col-md-6">
           <!-- NOTE img-fluid tells an img tag to not escape the bounds of column containing it (col-6) -->
@@ -51,9 +67,11 @@
     <!-- NOTE container-fluid goes full width -->
     <section class="container-fluid bg-primary">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-8">
+        <div class="col-12 col-md-8 py-5 text-light">
           <h2>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, magnam! Inventore, nam."</h2>
-          <!-- TODO add a logo here -->
+          <p class="text-center mb-0">
+            <i class="mdi mdi-pac-man"></i>
+          </p>
           <p class="text-center">The next web</p>
         </div>
       </div>
@@ -61,7 +79,7 @@
 
     <!-- ANCHOR features -->
     <section class="container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-12 col-md-4 order-2 order-md-1">
           <img class="img-fluid"
             src="https://images.unsplash.com/photo-1505156868547-9b49f4df4e04?q=80&w=2263&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
@@ -72,23 +90,31 @@
           <!-- NOTE we can split up a column with a row, which gives another 12 units of spacing to work with inside of that column -->
           <div class="row">
             <div class="col-12 col-md-6 text-center">
-              <p class="fs-1">📱</p>
-              <p>Device Mockups</p>
+              <p class="fs-1">
+                <i class="mdi mdi-cellphone text-primary"></i>
+              </p>
+              <p class="fw-bold">Device Mockups</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
             <div class="col-12 col-md-6 text-center">
-              <p class="fs-1">📷</p>
-              <p>Flexible Use</p>
+              <p class="fs-1">
+                <i class="mdi mdi-camera text-primary"></i>
+              </p>
+              <p class="fw-bold">Flexible Use</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
             <div class="col-12 col-md-6 text-center">
-              <p class="fs-1">🎁</p>
-              <p>Free to Use</p>
+              <p class="fs-1">
+                <i class="mdi mdi-gift text-primary"></i>
+              </p>
+              <p class="fw-bold">Free to Use</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
             <div class="col-12 col-md-6 text-center">
-              <p class="fs-1">✅</p>
-              <p>Open Source</p>
+              <p class="fs-1">
+                <i class="mdi mdi-check-decagram text-primary"></i>
+              </p>
+              <p class="fw-bold">Open Source</p>
               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, odit?</p>
             </div>
           </div>
@@ -99,11 +125,11 @@
 
     <!-- ANCHOR design -->
     <section class="container-fluid bg-light">
-      <!-- NOTE no padding on rows -->
-      <div class="row mx-5">
-        <!-- NOTE no maring on columns -->
+      <!-- NOTE no padding on rows (x-axis) -->
+      <div class="row align-items-center mx-5 py-4">
+        <!-- NOTE no margin on columns (x-axis) -->
         <div class="col-12 col-md-6">
-          <h2>Enter a new age of web design</h2>
+          <h2 class="newsreader">Enter a new age of web design</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi velit assumenda maxime ducimus
             exercitationem voluptas aliquam perspiciatis dolore, reiciendis ullam repellendus, dolorum quisquam
             consequuntur reprehenderit aperiam harum hic quidem dolor ad praesentium! Earum doloribus sit ducimus
@@ -121,12 +147,13 @@
     <section class="container-fluid">
       <div class="row align-items-center building-bg-image">
         <div class="col-12 ps-5">
-          <h2>
+          <h2 class="fs-1 text-light newsreader text-shadow">
             Stop Waiting
             <br>
             Start Building
           </h2>
-          <button>Download for free</button>
+          <!-- FIXME make this button less gross -->
+          <button class="btn btn-outline-light rounded-pill text-shadow">Download for free</button>
         </div>
       </div>
     </section>
@@ -134,17 +161,24 @@
     <!-- ANCHOR download -->
     <div class="container-fluid bg-primary">
       <div class="row">
-        <div class="col-12 text-center">
-          <h3>Get the app now!</h3>
-          <button>Google Play</button>
-          <button>App Store</button>
+        <div class="col-12 text-center py-5">
+          <h3 class="text-light mb-3">Get the app now!</h3>
+          <button class="btn btn-dark">
+            <!-- NOTE icon brought in through mdi link in header -->
+            <i class="mdi mdi-google-play text-success"></i>
+            Google Play
+          </button>
+          <button class="btn btn-dark">
+            <i class="mdi mdi-apple"></i>
+            App Store
+          </button>
         </div>
       </div>
     </div>
 
   </main>
 
-  <footer>
+  <footer class="bg-dark text-light py-3">
     <section class="container-fluid">
       <div class="row">
         <div class="col-12 text-center">
