--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
   <title>Document</title>
 </head>
 
-<body class="debug">
+<!-- NOTE add debug class to body to have mick's bootstrap tool work for you -->
+<!-- <body class="debug"> -->
+
+<body>
 
   <!-- NOTE sticky top makes navbar scroll along with page -->
   <header class="shadow sticky-top bg-light p-3">
@@ -41,7 +44,7 @@
     <section class="container">
       <div class="row align-items-center">
         <!-- NOTE you are a col-12 until you hit the medium breakpoint(768px) and then you are col-6 -->
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6 p-5">
           <h1 class="newsreader">Showcase your app beautifully.</h1>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut eaque qui eius voluptas harum sequi!</p>
           <button class="btn btn-dark">
@@ -67,7 +70,7 @@
     <!-- NOTE container-fluid goes full width -->
     <section class="container-fluid bg-primary">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-8 py-5 text-light">
+        <div class="col-12 col-md-8 py-5 px-4 text-light">
           <h2>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, magnam! Inventore, nam."</h2>
           <p class="text-center mb-0">
             <i class="mdi mdi-pac-man"></i>
