--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Brings in Bootstrap's css -->
+  <!-- Brings in Bootstrap's css (snippet: link:b5) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <!-- Mick's bootstrap debugging tool -->
+  <!-- Mick's bootstrap debugging tool (snippet: style:debug) -->
   <script id="debug-script" src="https://cdn.jsdelivr.net/gh/MickShannahan/style-debug@latest/debug.min.js"
     defer></script>
   <!-- Google font links -->
@@ -16,7 +16,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap"
     rel="stylesheet">
-  <!-- Material design icons -->
+  <!-- Material design icons (snippet: link:mdi) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <!-- Load our own style sheet after bootstrap in case we want to overwrite something -->
   <link rel="stylesheet" href="style.css">
@@ -42,6 +42,7 @@
   <main>
     <!-- ANCHOR hero -->
     <section class="container">
+      <!-- NOTE rows are display:flex by default, so you can add align/justify classes to them to move around columns -->
       <div class="row align-items-center">
         <!-- NOTE you are a col-12 until you hit the medium breakpoint(768px) and then you are col-6 -->
         <div class="col-12 col-md-6 p-5">
