--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-  <!-- NOTE sticky top makes navbar scroll along with page -->
+  <!-- NOTE sticky top makes navbar scroll along with page. Sticky top will make the element stick to its direct parent, in this case the body -->
   <header class="shadow sticky-top bg-light p-3">
     <section class="container">
       <div class="row">
